--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ https://www.trebbleblock.help/?sl=5982397-99570&pub_click_id={External_ID_from_t
 
 ">
             <video controls> 
-                <source src="video.MP4" type="video/mp4">
+                <source src="video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
            <div class="ad"> 
